files/shkuber_8/service-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-http-service
spec:
  selector:
    app: nginx-http
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
