files/shkuber_8/service-https.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-https-service
spec:
  selector:
    app: nginx-https
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
