files/shkuber_8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-https-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - localhost
    secretName: nginx-tls-secret
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-https-service
            port:
              number: 80
